Första commit labb3. Skapat CSS-fil för att styra utseendet m.m.